--- a/website/news.html
+++ b/website/news.html
@@ -31,6 +31,7 @@
           <li class="current"><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="who.html">Who we are</a></li>
+          <li><a href="demo.html">Demo</a></li>
           <li><a href="news.html">News & Events</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -45,6 +46,10 @@
 
 		  <div>
 	       <h1>News</h1>
+	   </br>
+	      </div> 
+		  <p>03-23-2016</p>
+		<p>We are excited to report that REDAPTOR passed the initial review stage and has now gone to the Open Science Prize panel of expert advisers.</p>
 	   </br>
 	      </div> 
 		  <p>02-29-2016</p>
@@ -65,7 +70,7 @@
   </div><!--close main-->
   
     <footer>
-	  <a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="who.html">Who we are</a> | <a href="news.html">News & Events</a> | <a href="contact.html">Contact Us</a><br/><br/>
+	  <a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="who.html">Who we are</a> | <a href="demo.html">Demo</a> | <a href="news.html">News & Events</a> | <a href="contact.html">Contact Us</a><br/><br/>
 	  
     </footer>
 
