--- a/website/who.html
+++ b/website/who.html
@@ -31,6 +31,7 @@
           <li class="current"><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="who.html">Who we are</a></li>
+           <li><a href="demo.html">Demo</a></li>
           <li><a href="news.html">News & Events</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -142,7 +143,7 @@
   </div><!--close main-->
   
     <footer>
-	  <a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="who.html">Who we are</a> | <a href="news.html">News & Events</a> | <a href="contact.html">Contact Us</a><br/><br/>
+	  <a href="index.html">Home</a> | <a href="about.html">About</a> | <a href="who.html">Who we are</a> |  <a href="demo.html">Demo</a> | <a href="news.html">News & Events</a> | <a href="contact.html">Contact Us</a><br/><br/>
 	  
     </footer>
 
